Nightmare 1.16 backport, darn OpenGL