@@ -22,6 +22,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.*;
 import java.util.concurrent.*;
+import java.util.stream.Collectors;
 
 public class PFMDataGenerator extends PFMGenerator {
     public static boolean FROZEN = false;
@@ -45,9 +46,14 @@ public class PFMDataGenerator extends PFMGenerator {
             if (!pfmCacheDataFile.toFile().isFile()) {
                 Files.deleteIfExists(pfmCacheDataFile);
                 Files.createFile(pfmCacheDataFile);
-                Files.writeString(pfmCacheDataFile, "{}");
+                Files.write(
+                        pfmCacheDataFile,
+                        "{}".getBytes(StandardCharsets.UTF_8),
+                        StandardOpenOption.APPEND
+                );
             }
-            PFMCache cached = PFMCache.fromJson(JSON_PARSER.parse(Files.readString(pfmCacheDataFile)));
+            String fileContent = new String(Files.readAllBytes(pfmCacheDataFile), StandardCharsets.UTF_8);
+            PFMCache cached = PFMCache.fromJson(JSON_PARSER.parse(fileContent));
             List<String> hashToCompare = hashDirectory(output.toFile(), false);
             List<Identifier> variants = new ArrayList<>();
 
@@ -66,7 +72,7 @@ public class PFMDataGenerator extends PFMGenerator {
                 providers.add(new PFMRecipeProvider(this));
 
                 PFMMCMetaProvider metaProvider = new PFMMCMetaProvider(this);
-                metaProvider.setInfo(new PFMMCMetaProvider.PackInfo(PackType.DATA, "PFM-Data"));
+                metaProvider.setInfo(new PFMMCMetaProvider.PackInfo("PFM-Data"));
                 providers.add(metaProvider);
                 this.setTotalCount(providers.size());
 
@@ -77,7 +83,7 @@ public class PFMDataGenerator extends PFMGenerator {
                 ExecutorService executor = Executors.newFixedThreadPool(providers.size());
                 List<? extends Future<?>> futures = providers.stream()
                         .map(provider -> executor.submit(provider::run))
-                        .toList();
+                        .collect(Collectors.toList());
 
                 while (!allDone) {
                     allDone = futures.stream().allMatch(Future::isDone);
@@ -95,7 +101,11 @@ public class PFMDataGenerator extends PFMGenerator {
                 Files.createFile(pfmCacheDataFile);
                 List<String> newDataHash = hashDirectory(output.toFile(), false);
                 PFMCache cache = new PFMCache(Version.getCurrentVersion(), PFMFileUtil.getModLoader(), newDataHash, variants);
-                Files.writeString(pfmCacheDataFile, GSON.toJson(cache.toJson()), StandardOpenOption.APPEND);
+                Files.write(
+                        pfmCacheDataFile,
+                        GSON.toJson(cache.toJson()).getBytes(StandardCharsets.UTF_8),
+                        StandardOpenOption.APPEND
+                );
             } else {
                 getLogger().info("Data Hash for Game Data and Variant List matched, skipping generation");
             }
